--- a/static/css/common.css
+++ b/static/css/common.css
@@ -1,38 +1,50 @@
-
-body
-{
-    background-color: #FFEAEB ;
+body {
+  background-color: #FFEAEB;
 }
-.round-box-with-shadow
-{
-  background-color: white;border-radius:1rem;box-shadow: 5px 5px 20px 1px rgba(0,0,0,0.1);
+
+.round-box-with-shadow {
+  background-color: white;
+  border-radius: 1rem;
+  box-shadow: 5px 5px 20px 1px rgba(0, 0, 0, 0.1);
 }
-.image-div
-{
-    height: 50vh;
 
-    box-shadow: inset 20px 20px 60px rgba(0,0,0,0.15),
-                inset -20px -20px 60px rgba(0,0,0,0.15);
+.image-div {
+  height: 50vh;
 
-    background-image: url("/static/BG.png");
+  box-shadow: inset 20px 20px 60px rgba(0, 0, 0, 0.15),
+    inset -20px -20px 60px rgba(0, 0, 0, 0.15);
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background-image: url("/static/BG.png");
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  color: transparent;
+  letter-spacing: 2px;
+
+  animation: text_reveal 5s ease forwards;
+}
+
+@keyframes text_reveal {
+  0% {
+    color: transparent;
+  }
+
+  100% {
     color: white;
-    letter-spacing: 2px;
+  }
 }
-.illustrations
-{
-    width: 70%;
-    height: 70%;
-    object-fit: contain;
+
+.illustrations {
+  width: 70%;
+  height: 70%;
+  object-fit: contain;
 }
-@media (max-width: 700px)
-{
-  .illustrations
-  {
+
+@media (max-width: 700px) {
+  .illustrations {
     display: none;
   }
 }
+
