--- a/templates/meds.html
+++ b/templates/meds.html
@@ -1,37 +1,35 @@
-
 {% extends "layout.html" %}
 {% block body %}
-<link rel="stylesheet" href="static/css/style.css" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/card.css')}}">
 <link rel="stylesheet" href="static/css/map.css" />
 <div class="image-div">
     SUPPLEMENTS FOR PREGNANCY
 </div>
 
-<!-- Main Section -->
-<div id="main-news-container" class="container">
-    <div class="row">
-        <div class="col-sm-12 col-md-4 d-flex justify-content-center">
-            <div class="card" style="width: 18rem; height: 19rem;box-shadow: 2px 4px 4px 2px rgba(0,0,0,.2);">
-                <img src="https://onemg.gumlet.io/l_watermark_346,w_690,h_700/a_ignore,w_690,h_700,c_pad,q_auto,f_auto/igfbo0nlycpxnhdsoyoy.jpg"
-                    class="card-img-top img-fluid" alt="News">
-                <div class="card-body">
-                    <h5 class="card-title">Horlicks Mother's Plus Vanilla</h5>
-                    <a target="_blank"
-                        href="https://www.1mg.com/categories/fitness-supplements/family-nutrition/pregnancy-lactation-834"
-                        class="btn" style="border-radius: 2rem; background-color:#93215A; border:none; color: #ffeaeb;font-weight: 500;font-size: large;">Buy Now</a>
-                </div>
-            </div>
+<div class="card-class-container">
+    <div class="card-class">
+        <img class="card-class-image"
+            src="https://onemg.gumlet.io/l_watermark_346,w_690,h_700/a_ignore,w_690,h_700,c_pad,q_auto,f_auto/igfbo0nlycpxnhdsoyoy.jpg"
+            alt="Card image cap">
+        <div>
+            <div class="card-class-title">Horlicks Mother's Plus Vanilla</div>
+            <a class="card-class-button"
+                href="https://www.1mg.com/categories/fitness-supplements/family-nutrition/pregnancy-lactation-834">
+                BUY NOW
+            </a>
         </div>
-        <div class="col-sm-12 col-md-4 d-flex justify-content-center">
-            <div class="card" style="width: 18rem; height: 19rem;box-shadow: 2px 4px 4px 2px rgba(0,0,0,.2);">
-                <img src="https://onemg.gumlet.io/l_watermark_346,w_690,h_700/a_ignore,w_690,h_700,c_pad,q_auto,f_auto/cropped/aokqjhqfrx5ab1vygedm.jpg"
-                    class="card-img-top img-fluid" alt="News">
-                <div class="card-body">
-                    <h5 class="card-title">Vitamin D</h5>
-                    <a target="_blank"
-                        href="https://www.1mg.com/otc/d3sol-sachet-vanilla-otc323291"
-                        class="btn" style="border-radius: 2rem; background-color:#93215A; border:none; color: #ffeaeb;font-weight: 500;font-size: large;">Buy Now</a>
-                </div>
-            </div>
+    </div>
+    <div class="card-class">
+        <img class="card-class-image"
+            src="https://onemg.gumlet.io/l_watermark_346,w_690,h_700/a_ignore,w_690,h_700,c_pad,q_auto,f_auto/cropped/aokqjhqfrx5ab1vygedm.jpg"
+            alt="Card image cap">
+        <div>
+            <div class="card-class-title">Vitamin D</div>
+            <a class="card-class-button" href="https://www.1mg.com/otc/d3sol-sachet-vanilla-otc323291">
+                BUY NOW
+            </a>
+        </div>
+    </div>
 </div>
-    {% endblock %}
+
+{% endblock %}
