--- a/templates/midwife.html
+++ b/templates/midwife.html
@@ -1,31 +1,37 @@
 {% extends "layout.html" %}
 {% block body %}
-<br/>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/card.css')}}">
 <div class="image-div">
   MIDWIFE PORTAL
 </div>
 
-<div class="container d-flex flex-row flex-wrap p-5">
+<div class="card-class-container">
 
-<div class="card" style="width: 30rem; margin: 1rem;box-shadow: 2px 4px 4px 2px rgba(0,0,0,.2);">
-    <img class="card-img-top" src="https://www.onmanorama.com/content/dam/mm/en/career-and-campus/top-news/images/2021/3/1/nurse.jpg.transform/onm-articleimage/image.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Sushmita</h5>
-      <p class="card-text"><strong>Experience: </strong> 4yrs</p>
-      <p class="card-text"><strong>Location: </strong> Within 10km</p>
-      <p class="card-text"><strong>Contact: </strong> <a href="tel:92123xxxxx">92123xxxxx</a></p>
+  <div class="card-class">
+    <img class="card-class-image"
+      src="https://www.onmanorama.com/content/dam/mm/en/career-and-campus/top-news/images/2021/3/1/nurse.jpg.transform/onm-articleimage/image.jpg"
+      alt="Card image cap">
+    <div class="card-class-body">
+      <div class="card-class-title">Sushmita</div>
+      <div class="">
+        <div class="card-class-subtext"><strong>Experience: </strong> 4yrs</div>
+        <div class="card-class-subtext"><strong>Location: </strong> Within 10km</div>
+        <div class="card-class-subtext"><strong>Contact: </strong> <a href="tel:92123xxxxx">92123xxxxx</a></div>
+      </div>
     </div>
   </div>
 
-  <div class="card" style="width: 30rem; margin: 1rem;box-shadow: 2px 4px 4px 2px rgba(0,0,0,.2);">
-    <img class="card-img-top" src="https://images.indianexpress.com/2018/03/nurse-759.jpg?w=389" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Sugandha</h5>
-      <p class="card-text"><strong>Experience: </strong> 6yrs</p>
-      <p class="card-text"><strong>Location: </strong> Within 15km</p>
-      <p class="card-text"><strong>Contact: </strong> <a href="tel:87123xxxxx">87123xxxxx</a></p>
+  <div class="card-class">
+    <img class="card-class-image" src="https://images.indianexpress.com/2018/03/nurse-759.jpg?w=389"
+      alt="Card image cap">
+    <div class="card-class-body">
+      <div class="card-class-title">Sugandha</div>
+      <div class="">
+        <div class="card-class-subtext"><strong>Experience: </strong> 4yrs</div>
+        <div class="card-class-subtext"><strong>Location: </strong> Within 15km</div>
+        <div class="card-class-subtext"><strong>Contact: </strong> <a href="tel:87123xxxxx">87123xxxxx</a></div>
+      </div>
     </div>
   </div>
-
 </div>
 {% endblock %}
