--- a/templates/meds.html
+++ b/templates/meds.html
@@ -12,7 +12,7 @@
             src="https://onemg.gumlet.io/l_watermark_346,w_690,h_700/a_ignore,w_690,h_700,c_pad,q_auto,f_auto/igfbo0nlycpxnhdsoyoy.jpg"
             alt="Card image cap">
         <div>
-            <div class="card-class-title">Horlicks Mother's Plus Vanilla</div>
+            <div class="card-class-title">Mother's Horlicks</div>
             <a class="card-class-button"
                 href="https://www.1mg.com/categories/fitness-supplements/family-nutrition/pregnancy-lactation-834">
                 BUY NOW
