--- a/templates/product.html
+++ b/templates/product.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="static/css/map.css" />
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/card.css')}}">
 <div class="image-div">
-    Our Products
+    OUR PRODUCTS
 </div>
 
 <div class="card-class-container">
