--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
     </div>
 </div>
 
-<div class="image-div">
+<div class="image-div" style="font-size: 1rem;font-weight: 200;">
     A mother is your first friend, your best friend, your forever friend.
 </div>
 
@@ -60,7 +60,7 @@
     </div>
 </div>
 
-<div class="image-div">
+<div class="image-div" style="font-size: 1rem;font-weight: 200;">
     Motherhood is the biggest gamble in the world. It is the glorious life force. It’s huge and scary – it’s an act of infinite optimism.
 </div>
 
@@ -74,7 +74,7 @@
     </div>
 </div>
 
-<div class="image-div">
+<div class="image-div" style="font-size: 1rem;font-weight: 200;">
     To describe my mother would be to write about a hurricane in its perfect power.
 </div>
 
@@ -90,7 +90,7 @@
     </div>
 </div>
 
-<div class="image-div">
+<div class="image-div" style="font-size: 1rem;font-weight: 200;"> 
     When you are looking at your mother, you are looking at the purest love you will ever know.
 </div>
 
