--- a/static/css/common.css
+++ b/static/css/common.css
@@ -23,6 +23,9 @@ body {
   color: transparent;
   letter-spacing: 2px;
 
+  font-size: 3rem;font-weight: 700;
+  
+
   animation: text_reveal 5s ease forwards;
 }
 
