Added Payment Portal

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,7 +59,7 @@
                     <a class="nav-link" href="{{url_for('stats')}}">World Data</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('ml_playground')}}">Predict MMR</a>
+                    <a class="nav-link" href="{{url_for('ml_playground')}}">MMR</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('product')}}">Our Products</a>
