--- a/templates/product.html
+++ b/templates/product.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
+<script src="https://polyfill.io/v3/polyfill.min.js?version=3.52.1&features=fetch"></script>
+    <script src="https://js.stripe.com/v3/"></script>
 <link rel="stylesheet" href="static/css/map.css" />
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/card.css')}}">
 <div class="image-div">
@@ -15,9 +17,11 @@
             </div>
             <div class="card-class-subtext"><strong>Desc: </strong> A book to prepare you for your first baby</div>
             <div class="card-class-subtext"><strong>Price: </strong> 199 Rupees</div>
-            <div class="card-class-button">
+            <form action="/create-checkout-session" method="post">
+            <button type="submit" id="checkout-button" class="card-class-button">
                 BUY NOW
-            </div>
+            </button>
+        </form>
         </div>
     </div>
 
