--- a/static/css/card.css
+++ b/static/css/card.css
@@ -49,6 +49,8 @@
 }
 .card-class-button
 {
+    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,6 +69,7 @@
 }
 .card-class-button:hover
 {
+    cursor: pointer;
     color: white;
     text-decoration: none;
 }
