--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
         <img class="illustrations" src="/static/Illustraions/Chat bot-pana.png">
     </div>
     <div class="right">
-        <div class="Slide-Title">POSTPARTUM BOT</div>
+        <div class="Slide-Title">HEALTH CHAT BOT</div>
             A chatbot based on RASA trained on data related to health queries.
     </div>
 </div>
