--- a/templates/layout.html
+++ b/templates/layout.html
@@ -106,7 +106,7 @@
 
 <div class="chat-box">
 <div class="chat-box-header" style="background-color: #93215A;">
-  Postpartum Bot
+  Health Chat Bot
   <span class="chat-box-toggle"><i class="material-icons">close</i></span>
 </div>
 <div class="chat-box-body">
