--- a/templates/product.html
+++ b/templates/product.html
@@ -29,7 +29,7 @@
         <img class="card-class-image" src="/static/Book2.png" alt="Card image cap">
         <div>
             <div class="card-class-title">
-                Postpartum care
+                Health care
             </div>
             <div class="card-class-subtext"><strong>Desc: </strong> A book to recover from your first pregnancy</div>
             <div class="card-class-subtext"><strong>Price: </strong> 199 Rupees</div>
