--- a/templates/layout.html
+++ b/templates/layout.html
@@ -61,6 +61,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('ml_playground')}}">MMR</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      RelaxZone
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="{{url_for('music')}}">Music</a>
+                      <a class="dropdown-item" href="{{url_for('art')}}">Art</a>
+                      <a class="dropdown-item" href="{{url_for('yoga')}}">Yoga</a>
+                    </ul>
+                  </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('product')}}">Our Products</a>
                 </li>
